--- a/hello.html
+++ b/hello.html
@@ -6,6 +6,16 @@
   </head>
   <body>
     <h1>Hello World</h1>
+    <h2>自己紹介</h2>
+    <h3>名前</h3>
+<ul>
+  <li>柴田はるな</li>
+</ul>
+    <h3>趣味</h3>
+<ol>
+  <li>茶道</li>
+  <li>お菓子作り</li>
+</ol>
     Second Message with HTML
   </body>
 </html>
